layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -178,19 +178,19 @@
 			.image img
 			{
 				display: block;
-				width: 100%;
+/* 				width: 100%; */
 			}
 
 			.image.fit
 			{
 				display: block;
-				width: 100%;
+/* 				width: 100%; */
 			}
 			
 			.image.featured
 			{
 				display: block;
-				width: 100%;
+/* 				width: 100%; */
 				margin: 0 0 3.5em 0;
 			}
 			
